# experimentation-platform

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  renovate.json
.github/workflows/: api-ci.yml
apps/analysis/: .pyiceberg.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  spark-defaults.conf
apps/analysis/ab_testing_platform/: api.py  pipeline.py  readme.md
apps/analysis/ab_testing_platform/lib/bayesian/: __init__.py  results.py  utils.py
apps/analysis/ab_testing_platform/lib/bucketing/: __init__.py  frequentist_test.py
apps/analysis/ab_testing_platform/lib/corrections/: __init__.py  bonferroni.py  holm.py  statsmodels.py
apps/analysis/ab_testing_platform/lib/frequentist/: __init__.py  plotting.py  results.py
apps/analysis/config/: servers.json
apps/analysis/notebooks/: AB_Testing_Platform_Setup.ipynb
apps/analysis/spark/: spark-defaults.conf
apps/analysis/spark/conf/: spark-defaults.conf  spark-env.sh
apps/analysis/src/: api.py
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  package.json  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: d21c64a1dc96_initial_migration.py
apps/api/scripts/: dev.sh  init_clickhouse.py  test_clickhouse.py
apps/api/src/: dependencies.py  hello.py  main.py
apps/api/src/api/: __init__.py  config.py
apps/api/src/api/db/: session.py
apps/api/src/api/models/: __init__.py  database.py  experiments.py
apps/api/src/api/routers/: __init__.py  experiments.py  features.py  metrics.py
apps/api/src/config/: app.py  iceberg.py  iceberg_config.py
apps/api/src/db/: base.py  seed.py  session.py
apps/api/src/middleware/: error_handler.py
apps/api/src/migrations/: env.py
apps/api/src/migrations/versions/: 1c54e6721bac_initial_migration.py  42d5e51c5bd8_first.py  67c12f835727_adding_traffic_allocation_column.py  709ebe067f21_first.py  86a5b3ab538e_adding_stopped_readon.py  cc2dc1913bf0_adding_ramp_up_columns.py
apps/api/src/models/: analysis.py  analysis_model.py  enums.py  experiment.py  experiments.py  experiments_model.py  guardrails.py  guardrails_model.py  metrics.py  metrics_model.py  user.py  user_model.py  variants.py  variants_model.py
apps/api/src/routers/: __init__.py  experiments.py  features.py  metrics.py  system.py
apps/api/src/schema/: clickhouse_schema.py  iceberg.py  iceberg_schema.py
apps/api/src/services/: analysis.py  bucketing.py  cache.py  clickhouse_data.py  data.py  experiments.py  scheduler.py  system_metrics.py
apps/api/src/services/analysis/: __init__.py  bayesian.py  combined.py  correction.py  frequentist.py
apps/api/src/types/: __init__.py
apps/api/src/types/analysis/: __init__.py  models.py
apps/api/src/types/common/: __init__.py  enums.py  user.py
apps/api/src/types/experiments/: __init__.py  base.py  guardrails.py  models.py  variants.py
apps/api/src/types/metrics/: __init__.py  models.py
apps/api/src/utils/: logger.py
apps/demo/: README.md  package.json  tsconfig.json
apps/demo/public/: demo.html  index.html  simulator.html
apps/demo/src/: server.ts
apps/frontend/: .env.example  Dockerfile  README.md  components.json  package.json  vite.config.ts
apps/frontend/static/: sw.js
docker/: iceberg-catalog.properties
docker/clickhouse/config/: custom-config.xml
docker/clickhouse/init/: init-db.sh  init-db.sql
docker/clickhouse/users/: custom-users.xml
docker/postgres/: 01-init-hive-db.sh
old_ab_testing_platform/: __main__.py
old_ab_testing_platform/lib/: utils.py
old_ab_testing_platform/lib/bayesian/: bayesian_ab_test.py  plotting.py
old_ab_testing_platform/lib/bucketing/: bayesian_test.py  user_bucketing_ab_test.py  utils.py
old_ab_testing_platform/lib/corrections/: benjamini_hochberg.py  (+1 more)
scripts/: run.sh  setup.sh
(+69 files in other folders)
