[project]
name = "@experimentation-platform/api"
version = "0.1.0"
description = "API for the experimentation platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  jupyter==1.0.0
  spylon-kernel==0.4.1
  pyiceberg[pyarrow,duckdb,pandas]==0.7.1
  jupysql==0.10.5
  matplotlib==3.9.2
  scipy==1.14.1
  duckdb-engine==0.13.1
]
