[project]
name = "experimentation-platform-api"
version = "0.1.0"
description = "API service for the experimentation platform"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.38",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "alembic>=1.14.1",
    "psycopg2-binary>=2.9.10",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "pyiceberg>=0.8.1",
    "pyarrow>=19.0.1",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "numpy>=2.2.3",
    "requests>=2.32.3",
    "boto3>=1.37.0",
    "aiohttp>=3.11.13",
    "python-dateutil>=2.9.0",
    "thrift>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.0.291",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
